# DeepDive

./: .gitignore  ApiRouter.cpp  ApiRouter.hpp  ApiRoutes.hpp  CMakeLists.txt  FrontRouter.hpp  FrontendRoutes.hpp  LICENSE.md  Main.cpp  README.md  Server.hpp  Services.cpp  Services.hpp
backend/: ApiRouter.cpp  ApiRouter.hpp  CMakeLists.txt  FrontRouter.hpp  Main.cpp  Server.hpp  Services.cpp  Services.hpp  Validator.hpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/assets/: Fonts.css  Var.css
frontend/src/components/: CharacterCard.css  CharacterCard.jsx  CharacterExplorer.css  CharacterExplorer.jsx  Editor.css  Editor.jsx  Footer.jsx  Header.css  Header.jsx  SimpleCard.css  SimpleCard.jsx  Viewer.css  Viewer.jsx
frontend/src/pages/: AuthorizationPage.jsx  HomePage.css  HomePage.jsx  ProfilePage.css  ProfilePage.jsx  RegistrationPage.jsx  Test.jsx
frontend/src/utils/: Script.js  Validator.js
server/static/: Styles.css  Validator.js
server/templates/: Authorization.html  Registration.html
